<resources>
    <string name="app_name">OJT Tracker</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock Out</string>
    <string name="dtr_history">DTR History</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="export_dtr">Export DTR</string>
    <string name="total_hours_today">Total Hours Today</string>
    <string name="total_hours_week">Total Hours This Week</string>
    <string name="total_hours_month">Total Hours This Month</string>
    <string name="no_active_session">No active time session</string>
    <string name="active_session">Active session started at %s</string>
    <string name="time_in">Time In</string>
    <string name="time_out">Time Out</string>
    <string name="duration">Duration</string>
    <string name="date">Date</string>
    <string name="no_records_found">No records found</string>
    <string name="export_success">DTR exported successfully</string>
    <string name="export_failed">Failed to export DTR</string>
    <string name="permission_required">Storage permission required to export DTR</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_clock_out">Are you sure you want to clock out?</string>
    <string name="required_hours_per_day">Required hours per day</string>
    <string name="overtime_rate">Overtime rate</string>
    <string name="employee_name">Employee Name</string>
    <string name="employee_id">Employee ID</string>
    <string name="save">Save</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
</resources>
